商取引法に基づく表記追加

--- a/contact.html
+++ b/contact.html
@@ -200,6 +200,17 @@
         .desktop-only {
             display: inline;
         }
+        
+        /* Legal Links Center Alignment */
+        .legal-links {
+            text-align: center !important;
+            margin-left: auto !important;
+            margin-right: auto !important;
+            display: block !important;
+            width: 100% !important;
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+        }
 
         @media (max-width: 480px) {
             .contact-container {
@@ -300,6 +311,11 @@
                     <i class="fa-solid fa-headset"></i>
                     サポート：チャット・Web面談<span class="desktop-only">対応</span>
                 </p>
+            </div>
+            <div class="legal-links">
+                <a href="privacy-policy.html">プライバシーポリシー</a>
+                <span class="separator">｜</span>
+                <a href="tokutei-syotorihiki.html">特定商取引法に基づく表記</a>
             </div>
         </div>
     </div>
