--- a/index.html
+++ b/index.html
@@ -568,6 +568,11 @@
             <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
             <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談<span class="desktop-only">対応</span></p>
         </div>
+        <div class="legal-links">
+            <a href="privacy-policy.html">プライバシーポリシー</a>
+            <span class="separator">｜</span>
+            <a href="tokutei-syotorihiki.html">特定商取引法に基づく表記</a>
+        </div>
     </div>
 </section>
 
@@ -578,10 +583,6 @@
             <a href="contact.html" class="cta-button secondary large">お問い合わせ</a>
         </div>
     </div>
-
-
-
-
 
     <!-- GSAP CDN -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
