--- a/reviews.html
+++ b/reviews.html
@@ -41,6 +41,18 @@
 
     <!-- style.css -->
     <link rel="stylesheet" href="css/style.css">
+    
+    <style>
+    .legal-links {
+        text-align: center !important;
+        margin-left: auto !important;
+        margin-right: auto !important;
+        display: block !important;
+        width: 100% !important;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+    </style>
 </head>
 <body>
     <!-- Header -->
@@ -267,6 +279,11 @@
                 <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
                 <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
                 <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談<span class="desktop-only">対応</span></p>
+            </div>
+            <div class="legal-links">
+                <a href="privacy-policy.html">プライバシーポリシー</a>
+                <span class="separator">｜</span>
+                <a href="tokutei-syotorihiki.html">特定商取引法に基づく表記</a>
             </div>
         </div>
     </section>
