くれはキッズクリニック画像待ちの状態

--- a/reviews.html
+++ b/reviews.html
@@ -196,7 +196,7 @@
 
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="img/demo-doctor3.png" alt="導入医師" loading="lazy">
+                            <img src="clinic-logo-collections/kureha-kids-clinic.png" alt="くれはキッズクリニック" loading="lazy" class="clinic-logo">
                             <div class="review-profile">
                                 <h3 class="doctor-name">草開 祥平 先生</h3>
                                 <p class="clinic-name">くれはキッズクリニック</p>
