リンク先変更

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="お問い合わせ｜カルステップ">
     <meta property="og:description" content="カルステップに関するお問い合わせフォーム。資料請求、製品デモ、技術的なご質問など、お気軽にお問い合わせください。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://karustep.github.io/contact.html">
-    <meta property="og:image" content="https://karustep.github.io/img/karustep-hero-img.jpg">
+            <meta property="og:url" content="https://mjs.main.jp/karustep-LP/contact.html">
+            <meta property="og:image" content="https://mjs.main.jp/karustep-LP/img/karustep-hero-img.jpg">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/karustep-logo.png">
@@ -297,7 +297,7 @@
                 <h3>その他のお問い合わせ方法</h3>
                 <p>
                     <i class="fas fa-globe"></i>
-                    <a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a>
+                    <a href="https://mjs.main.jp/corporate/" target="_blank" rel="noopener noreferrer">会社ホームページ</a>
                 </p>
                 <p>
                     <i class="fas fa-envelope"></i>
