--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <meta name="keywords" content="医療,AIシュライバー,カルテ,電子カルテ,医師,診察,フットスイッチ,音声認識,自動要約,医療DX">
         <meta name="author" content="カルステップ">
         <meta name="robots" content="index, follow">
-        <link rel="canonical" href="https://mjs-com.github.io/karustep-LP/">
+        <link rel="canonical" href="https://mjs.main.jp/karustep-LP/">
 
         <!-- OGP Meta Tags -->
         <meta property="og:title" content="カルステップ｜踏むだけだから、向き合える。医療支援AIシュライバー">
         <meta property="og:description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://mjs-com.github.io/karustep-LP/">
-        <meta property="og:image" content="https://mjs-com.github.io/karustep-LP/img/ogp-img.jpg">
+        <meta property="og:url" content="https://mjs.main.jp/karustep-LP/">
+        <meta property="og:image" content="https://mjs.main.jp/karustep-LP/img/ogp-img.jpg">
         <meta property="og:site_name" content="カルステップ">
         <meta property="og:locale" content="ja_JP">
 
@@ -23,7 +23,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="カルステップ｜踏むだけだから、向き合える。医療支援AIシュライバー">
         <meta name="twitter:description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
-        <meta name="twitter:image" content="https://mjs-com.github.io/karustep-LP/img/ogp-img.jpg">
+        <meta name="twitter:image" content="https://mjs.main.jp/karustep-LP/img/ogp-img.jpg">
 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="img/karustep-logo.png">
@@ -50,10 +50,10 @@
             "name": "カルステップ",
             "description": "フットスイッチ操作による医療支援AIシュライバー。足で踏むだけでハンズフリー録音・AI要約・自動転記を実現し、医師の理想の診察をサポートします。",
             "image": [
-                "https://mjs-com.github.io/karustep-LP/img/karustep-logo-with-title.png",
-                "https://mjs-com.github.io/karustep-LP/img/item1_foot_pedal.jpg",
-                "https://mjs-com.github.io/karustep-LP/img/item2_microphone.png",
-                "https://mjs-com.github.io/karustep-LP/img/after-using-karustep.jpg"
+                "https://mjs.main.jp/karustep-LP/img/karustep-logo-with-title.png",
+                "https://mjs.main.jp/karustep-LP/img/item1_foot_pedal.jpg",
+                "https://mjs.main.jp/karustep-LP/img/item2_microphone.png",
+                "https://mjs.main.jp/karustep-LP/img/after-using-karustep.jpg"
             ],
             "brand": {
                 "@type": "Brand",
@@ -594,7 +594,7 @@
         </div>
         <div class="contact-info">
             <h4>お気軽にお問い合わせください</h4>
-            <p><i class="fas fa-globe"></i><a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
+            <p><i class="fas fa-globe"></i><a href="https://mjs.main.jp/corporate/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
             <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
             <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
             <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談<span class="desktop-only">対応</span></p>
