--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,7 +6,7 @@
         <title>プライバシーポリシー｜カルステップ</title>
         <meta name="description" content="カルステップのプライバシーポリシーについてご案内いたします。">
         <meta name="robots" content="noindex, nofollow">
-        <link rel="canonical" href="https://mjs-com.github.io/karustep-LP/privacy-policy.html">
+        <link rel="canonical" href="https://mjs.main.jp/karustep-LP/privacy-policy.html">
 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="img/karustep-logo.png">
@@ -150,7 +150,7 @@
             </div>
             <div class="contact-info">
                 <h4>お気軽にお問い合わせください</h4>
-                <p><i class="fas fa-globe"></i><a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
+                <p><i class="fas fa-globe"></i><a href="https://mjs.main.jp/corporate/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
                 <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
                 <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
                 <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談<span class="desktop-only">対応</span></p>
