--- a/recomended-machine.html
+++ b/recomended-machine.html
@@ -8,14 +8,14 @@
     <meta name="keywords" content="カルステップ,推奨環境,システム要件,Windows,動作環境,医療AIシュライバー">
     <meta name="author" content="カルステップ">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://mjs-com.github.io/karustep-LP/recomended-machine.html">
+    <link rel="canonical" href="https://mjs.main.jp/karustep-LP/recomended-machine.html">
 
     <!-- OGP Meta Tags -->
     <meta property="og:title" content="推奨環境｜カルステップ">
     <meta property="og:description" content="カルステップの推奨システム環境・動作要件について詳しく説明します。Windows環境での詳細なシステム要件をご確認ください。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://mjs-com.github.io/karustep-LP/recomended-machine.html">
-    <meta property="og:image" content="https://mjs-com.github.io/karustep-LP/img/ogp-img.jpg">
+    <meta property="og:url" content="https://mjs.main.jp/karustep-LP/recomended-machine.html">
+    <meta property="og:image" content="https://mjs.main.jp/karustep-LP/img/ogp-img.jpg">
     <meta property="og:site_name" content="カルステップ">
     <meta property="og:locale" content="ja_JP">
 
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="推奨環境｜カルステップ">
     <meta name="twitter:description" content="カルステップの推奨システム環境・動作要件について詳しく説明します。Windows環境での詳細なシステム要件をご確認ください。">
-    <meta name="twitter:image" content="https://mjs-com.github.io/karustep-LP/img/ogp-img.jpg">
+    <meta name="twitter:image" content="https://mjs.main.jp/karustep-LP/img/ogp-img.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/karustep-logo.png">
@@ -267,7 +267,7 @@
             </div>
             <div class="contact-info">
                 <h4>お気軽にお問い合わせください</h4>
-                <p><i class="fas fa-globe"></i><a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
+                <p><i class="fas fa-globe"></i><a href="https://mjs.main.jp/corporate/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
                 <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
                 <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
                 <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談<span class="desktop-only">対応</span></p>
