--- a/reviews.html
+++ b/reviews.html
@@ -8,14 +8,14 @@
     <meta name="keywords" content="医療,AIシュライバー,カルテ,電子カルテ,医師,診察,レビュー,導入事例,口コミ">
     <meta name="author" content="カルステップ">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://mjs-com.github.io/karustep-LP/reviews.html">
+    <link rel="canonical" href="https://mjs.main.jp/karustep-LP/reviews.html">
 
     <!-- OGP Meta Tags -->
     <meta property="og:title" content="導入医師の声・レビュー｜カルステップ">
     <meta property="og:description" content="カルステップを導入された医師の方々の詳しい声やレビューをご紹介。実際の使用感やクリニックでの効果について詳しくお聞きしました。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://mjs-com.github.io/karustep-LP/reviews.html">
-    <meta property="og:image" content="https://mjs-com.github.io/karustep-LP/img/ogp-img.jpg">
+    <meta property="og:url" content="https://mjs.main.jp/karustep-LP/reviews.html">
+    <meta property="og:image" content="https://mjs.main.jp/karustep-LP/img/ogp-img.jpg">
     <meta property="og:site_name" content="カルステップ">
     <meta property="og:locale" content="ja_JP">
 
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="導入医師の声・レビュー｜カルステップ">
     <meta name="twitter:description" content="カルステップを導入された医師の方々の詳しい声やレビューをご紹介。実際の使用感やクリニックでの効果について詳しくお聞きしました。">
-    <meta name="twitter:image" content="https://mjs-com.github.io/karustep-LP/img/ogp-img.jpg">
+    <meta name="twitter:image" content="https://mjs.main.jp/karustep-LP/img/ogp-img.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/karustep-logo.png">
@@ -97,20 +97,6 @@
                             allowfullscreen
                             loading="lazy">
                         </iframe>
-                    </div>
-                    <div class="video-card">
-                        <div class="video-placeholder">
-                            <i class="fas fa-play-circle"></i>
-                            <p>インタビュー動画準備中</p>
-                            <small>谷村皮フ科<br>谷村裕嗣 先生</small>
-                        </div>
-                    </div>
-                    <div class="video-card">
-                        <div class="video-placeholder">
-                            <i class="fas fa-play-circle"></i>
-                            <p>インタビュー動画準備中</p>
-                            <small>豊田土橋リウマチクリニック<br>高杉浩司 先生</small>
-                        </div>
                     </div>
                 </div>
             </section>
@@ -196,7 +182,7 @@
 
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="clinic-logo-collections/kureha-kids-clinic.png" alt="くれはキッズクリニック" loading="lazy" class="clinic-logo">
+                            <img src="img/dr-kusabiraki.jpg" alt="くれはキッズクリニック" loading="lazy">
                             <div class="review-profile">
                                 <h3 class="doctor-name">草開 祥平 先生</h3>
                                 <p class="clinic-name">くれはキッズクリニック</p>
@@ -275,7 +261,7 @@
             </div>
             <div class="contact-info">
                 <h4>お気軽にお問い合わせください</h4>
-                <p><i class="fas fa-globe"></i><a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
+                <p><i class="fas fa-globe"></i><a href="https://mjs.main.jp/corporate/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
                 <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
                 <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
                 <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談<span class="desktop-only">対応</span></p>
