SEO対策metaタグ変更

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>カルステップ｜踏むだけだから、向き合える。医療支援AIシュライバー</title>
-        <meta name="description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
-        <meta name="keywords" content="医療,AIシュライバー,カルテ,電子カルテ,医師,診察,フットスイッチ,音声認識,自動要約,医療DX">
+        <meta name="description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ（karustep）」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
+        <meta name="keywords" content="カルステップ,karustep,医療,AIシュライバー,カルテ,電子カルテ,医師,診察,フットスイッチ,音声認識,自動要約,医療DX">
         <meta name="author" content="カルステップ">
         <meta name="robots" content="index, follow">
         <link rel="canonical" href="https://mjs.main.jp/karustep-LP/">
 
         <!-- OGP Meta Tags -->
         <meta property="og:title" content="カルステップ｜踏むだけだから、向き合える。医療支援AIシュライバー">
-        <meta property="og:description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
+        <meta property="og:description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ（karustep）」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://mjs.main.jp/karustep-LP/">
         <meta property="og:image" content="https://mjs.main.jp/karustep-LP/img/ogp-img.jpg">
@@ -30,7 +30,7 @@
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="カルステップ｜踏むだけだから、向き合える。医療支援AIシュライバー">
-        <meta name="twitter:description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
+        <meta name="twitter:description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ（karustep）」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
         <meta name="twitter:image" content="https://mjs.main.jp/karustep-LP/img/ogp-img.jpg">
 
         <!-- Favicon -->
@@ -56,7 +56,8 @@
             "@context": "https://schema.org",
             "@type": "Product",
             "name": "カルステップ",
-            "description": "フットスイッチ操作による医療支援AIシュライバー。足で踏むだけでハンズフリー録音・AI要約・自動転記を実現し、医師の理想の診察をサポートします。",
+            "alternateName": "karustep",
+            "description": "フットスイッチ操作による医療支援AIシュライバー「カルステップ（karustep）」。足で踏むだけでハンズフリー録音・AI要約・自動転記を実現し、医師の理想の診察をサポートします。",
             "image": [
                 "https://mjs.main.jp/karustep-LP/img/karustep-logo-with-title.png",
                 "https://mjs.main.jp/karustep-LP/img/item1_foot_pedal.jpg",
