トライアルボタン追加

--- a/index.html
+++ b/index.html
@@ -623,10 +623,10 @@
 
     <!-- スティッキーフッター（追従CTA） -->
     <div id="sticky-footer" class="sticky-footer">
-        <div class="sticky-footer-content">
-            <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ購入</a>
-            <a href="contact.html" class="cta-button secondary large">お問い合わせ</a>
-        </div>
+            <div class="sticky-footer-content">
+        <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ購入</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfA8Vr7X6dY7JiOIg42yjbFMJfaAB3nW_YEZV6onkJA-U0FJw/viewform?usp=dialog" class="cta-button secondary large" target="_blank" rel="noopener noreferrer">無料トライアル</a>
+    </div>
     </div>
 
     <!-- GSAP CDN -->
