CTAボタンをトライアルに変更

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <p class="hero-subtitle"><span class="highlight-text">足元のAIシュライバー</span>で、<span class="highlight-text">理想の診察</span>を現実に</p>
                 </div>
                 <div class="hero-cta">
-                    <a href="https://buy.stripe.com/8x228r36d6Gdeg9dTd7ok03" class="cta-button primary large with-subtext" target="_blank" rel="noopener noreferrer">今すぐ、理想の診察をはじめる<br><span class="sub-text">（購入ページへ）</span></a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfA8Vr7X6dY7JiOIg42yjbFMJfaAB3nW_YEZV6onkJA-U0FJw/viewform?usp=dialog" class="cta-button primary large with-subtext" target="_blank" rel="noopener noreferrer">今すぐ、理想の診察をはじめる<br><span class="sub-text">（無料トライアルへ）</span></a>
                 </div>
             </div>
         </div>
@@ -602,7 +602,7 @@
             もう記録業務に悩む必要はありません。<br>今すぐ、理想の診察をはじめましょう。
         </p>
         <div class="closing-cta">
-            <a href="https://buy.stripe.com/8x228r36d6Gdeg9dTd7ok03" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ購入</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfA8Vr7X6dY7JiOIg42yjbFMJfaAB3nW_YEZV6onkJA-U0FJw/viewform?usp=dialog" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ無料トライアル</a>
             <a href="contact.html" class="cta-button secondary large">お問い合わせ</a>
         </div>
         <div class="contact-info">
