メアド変更

--- a/contact.html
+++ b/contact.html
@@ -321,7 +321,7 @@
                 </p>
                 <p>
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a>
+                    <a href="mailto:info@mjs-company.net">info@mjs-company.net</a>
                 </p>
                 <p>
                     <i class="fa-brands fa-square-x-twitter"></i>
