--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -146,7 +146,7 @@
                     <p>本プライバシーポリシーに関するお問い合わせは、以下の連絡先までお願いします。</p>
                     <div class="contact-details">
                         <p><strong>合同会社MJSカンパニー</strong></p>
-                        <p>メールアドレス: <a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
+                        <p>メールアドレス: <a href="mailto:info@mjs-company.net">info@mjs-company.net</a></p>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
             <div class="contact-info">
                 <h4>お気軽にお問い合わせください</h4>
                 <p><i class="fas fa-globe"></i><a href="https://mjs.main.jp/corporate/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
-                <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
+                <p><i class="fas fa-envelope"></i><a href="mailto:info@mjs-company.net">info@mjs-company.net</a></p>
                 <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
                 <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談<span class="desktop-only">対応</span></p>
             </div>
